# psc-saas

./: .gitignore  ARC42.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  compose.gen.yaml  compose.proto.yaml  compose.yaml
.github/workflows/: ci.yml
.roo/: mcp.json
.roo/commands/: commit.md  readme.md  review.md  test-module.md
.roo/rules/: commit.md  my_rules.md  rust.md  tools.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
config/: default.toml
crates/services/psc-provider-gateway/: Cargo.toml
crates/services/psc-provider-gateway/src/: lib.rs
deploy/kubernetes/psc-saas-base/: Chart.yaml  values.yaml
deploy/kubernetes/psc-saas-base/templates/: k8s-deployment.yaml  k8s-service.yaml  knative-service.yaml
docs/: proto.md
openapi/api/: charges.yaml  escrow.yaml  metrics.yaml  webhook.yaml
openapi/mtn/: mtn-collection.yaml  mtn-disbursement.yaml  mtn-remittance.yaml
openapi/orange/: orange-money.yaml
proto/balance/v1/: balance.proto
proto/common/v1/: common.proto
proto/journal/v1/: journal.proto
proto/payment/v1/: payment.proto
proto/payout/v1/: payout.proto
protos/: .gitkeep  buf.gen.yaml  buf.yaml
protos/common/v1/: common.proto
protos/payment/v1/: payment.proto
protos/psc/balance/v1/: balance.proto
protos/psc/common/v1/: common.proto
protos/psc/journal/v1/: journal.proto
protos/psc/payment/v1/: payment.proto
protos/psc/payout/v1/: payout.proto
scripts/: generate_proto.sh
tests/psc-config-loader/: integration_tests.rs
tests/psc-domain/: money.rs
tests/psc-secrets/: integration_tests.rs
