[package]
name = "psc-provider-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
psc-error.workspace = true
psc-provider.workspace = true
tokio.workspace = true
psc-mtn-collection = { workspace = true }
psc-mtn-disbursement = { workspace = true }
psc-mtn-remittance = { workspace = true }
psc-mtn-sandbox-provisioning = { workspace = true }
reqwest.workspace = true # reqwest for http client
url.workspace = true # url for parsing
serde.workspace = true # serde for (de)serialization
serde_json.workspace = true # serde_json for json operations
hmac = "0.12" # For HMAC-SHA256
sha2 = "0.10" # For SHA256 hashing
hex = "0.4" # For encoding HMAC result
nats.workspace = true
prost-types.workspace = true
rust_decimal.workspace = true
cuid.workspace = true
time.workspace = true
